--- a/novae.html
+++ b/novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 64
-</p><p class="card-text">Number of spectra: 4099
-</p><p class="card-text">Last update: 2023-07-16, 17:57</p>
+<p class="card-text">Number of stars: 65
+</p><p class="card-text">Number of spectra: 4100
+</p><p class="card-text">Last update: 2023-07-16, 18:17</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -818,6 +818,17 @@
       <td>2023-04-22</td>
       <td>2023-07-13</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-07-13 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novasgr2023b.html">Nova Sgr 2023b</a></td>
+      <td>17 52 50.20</td>
+      <td>-20 24 15.0</td>
+      <td></td>
+      <td>TCP J17525020-2024150</td>
+      <td>1</td>
+      <td>2023-07-15</td>
+      <td>2023-07-15</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-07-15 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
