--- a/novae.html
+++ b/novae.html
@@ -69,9 +69,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://asd.gsfc.nasa.gov/Koji.Mukai/novae/novae.html">Koji's List of Recent Galactic Novae</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 65
-</p><p class="card-text">Number of spectra: 4170
-</p><p class="card-text">Last update: 2024-02-11, 07:41</p>
+<p class="card-text">Number of stars: 66
+</p><p class="card-text">Number of spectra: 4171
+</p><p class="card-text">Last update: 2024-02-11, 21:29</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -829,6 +829,17 @@
       <td>2023-07-15</td>
       <td>2023-07-31</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2023-07-31 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+    </tr>
+    <tr>
+      <td><a href="novasco2024.html">Nova Sco 2024</a></td>
+      <td>17 26 18.09</td>
+      <td>-38 09 36.3</td>
+      <td></td>
+      <td>PNV J17261813-3809354</td>
+      <td>1</td>
+      <td>2024-02-11</td>
+      <td>2024-02-11</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2024-02-11 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
     </tr>
   </tbody>
 </table><br><br>
